--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0; url=https://2argos09.nbxxxxxx.us.kg">
   <title>Redirecting...</title>
 </head>
 <body>
-  <script type="text/javascript">
-    window.location.href = "https://2argos09.nbxxxxxx.us.kg";
-  </script>
   <p>If you are not redirected automatically, follow this <a href="https://2argos09.nbxxxxxx.us.kg">link</a>.</p>
 </body>
 </html>
